<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".enterOtpActivity">


    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp" />


    <ImageView
        android:id="@+id/letterImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/letter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#0000FF"
        app:layout_constraintTop_toBottomOf="@id/letterImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />


    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_enter_otp"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="#9A9FA8"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp" />


    <LinearLayout
        android:id="@+id/otpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <EditText
            android:id="@+id/code1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/textBackground"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:layout_margin="4dp" />

        <EditText
            android:id="@+id/code2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/textBackground"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:layout_margin="4dp" />

        <EditText
            android:id="@+id/code3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/textBackground"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:layout_margin="4dp" />

        <EditText
            android:id="@+id/code4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/textBackground"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:layout_margin="4dp" />

        <EditText
            android:id="@+id/code5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/textBackground"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="18sp"
            android:layout_margin="4dp" />

    </LinearLayout>


    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/reset_password"
        android:textSize="16sp"
        android:backgroundTint="#3657FF"
        app:layout_constraintTop_toBottomOf="@id/otpLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp" />


    <TextView
        android:id="@+id/resendOtpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didn_t_get_otp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:textSize="16sp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#3657FF"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@id/resendOtpText"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordButton"
        />



</androidx.constraintlayout.widget.ConstraintLayout>